# kaleidoscope

./: CMakeLists.txt
cmake/modules/: AddKaleidoscope.cmake  AddTinylang.cmake
include/kaleidoscope/Basic/: Version.h
include/kaleidoscope/CodeGen/: CodeGen.h
include/kaleidoscope/Lexer/: Lexer.h
include/kaleidoscope/Parser/: AST.h  Parser.h
lib/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  Version.cpp
lib/CodeGen/: CMakeLists.txt  CodeGen.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Parser/: AST.cpp  CMakeLists.txt  Parser.cpp
tools/: CMakeLists.txt  main.cpp
